[package]
name = "id-gen-bench-64"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
snowflake = "1.3.0"
sonyflake = "0.4.0"
twitter_snowflake = "1.0.2"

ulid = "1.2.1"
uuid = {version = "1.18.1",  features = ["v7", "v4"] }

[dev-dependencies]
criterion = {version = "0.7.0", features = ["html_reports"] }
csv = "1.3.1"
plotters = "0.3.7"
proptest = "1.8.0"

[[bench]]
name = "comparison"
harness = false
